# synapse

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/: launch.json
.github/workflows/: ci.yml  deploy-relay.yml  deploy-stack.yml  deploy-vps.yml  deploy-web.yml  release.yml
Formula/: synapse-server.rb
crates/app/: Cargo.toml  build.rs
crates/app/src/: account.rs  lib.rs  main.rs  net.rs  web.rs
crates/app/ui/: app.slint
crates/app/web/: DESIGN.md  app.css  app.js  capture-screenshot.mjs  index.html  package-lock.json  package.json  tsconfig.node.json  verify-native-shell.mjs  verify-ui.mjs  vite.config.ts
crates/app/web/legacy/: app.css
crates/app/web/public/: synapse-core.js
crates/app/web/src/: App.tsx  main.tsx  vite-env.d.ts
crates/app/web/src/theme/: synapse.css  variables.css
crates/relay/: Cargo.toml
crates/relay/src/: admin.rs  api.rs  auth.rs  db.rs  email.rs  main.rs  registry.rs  sso.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: account.rs  claude.rs  history.rs  http.rs  main.rs  manager.rs  models.rs  relay.rs  startup.rs  tail.rs  web_ui.rs
deploy/: Caddyfile  Dockerfile.server  docker-compose.vps.yml  docker-compose.yml  nginx-preview.conf  nginx-vps-synapse.conf
docs/: chat-rewrite-design.md  synara-theme-tokens.txt
docs/prd/: synapse-workspace-session-reset-thinking.md
docs/superpowers/plans/: 2026-06-29-chat-rewrite.md  2026-07-05-fixed-local-pairing-code.md
docs/superpowers/specs/: 2026-06-29-chat-webview-redesign-design.md  2026-06-30-multi-device-sync-design.md  2026-07-01-happy-coder-parity-design.md  2026-07-05-fixed-local-pairing-code-design.md
mobile/: build-device.sh  build-ios.sh  build-sim.sh  dev-server.sh
mobile/ios/Sources/: AppDelegate.mm  AppModel.swift  ChatWebView.swift  PairingView.swift  RootView.swift  SessionSheet.swift  Synapse-Bridging-Header.h  SynapseApp.swift  SynapseConnection.swift  SynapseModels.swift  WebHost.swift  WebShellView.swift  WorkspacesView.swift  main.m
mobile/ios/Synapse.xcodeproj/: project.pbxproj
scripts/: RELEASE-NOTES.md  SERVER-README.md  SSO-README.md  bootstrap-vps.sh  cloud-dev-watch.sh  deploy-mirror.sh  deploy-relay.sh  deploy-web-ssh.sh  install-relay.sh  install-server.sh  install.sh  setup-github-deploy-secrets.sh  setup-vps-autoupgrade.sh  synapse-server-wrapper.sh  sync-mirror-vps.sh  sync-web.sh  verify-web.sh  vps-auto-upgrade.sh  vps-sync-web.sh  vps-upgrade-relay.sh
