[workspace]
resolver = "2"
members = ["crates/server", "crates/app", "crates/relay"]

[workspace.package]
version = "0.2.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/zx/synapse"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }
