[package]
name = "synapse-relay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "synapse-relay"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
rand = "0.8"
http = "1"
clap = { version = "4", features = ["derive"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pemfile = "2"
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
